@@ -34,6 +34,7 @@ Daniel Armyr
 Enrico Scholz
 Martin Rozee
 Pawel Widera
+Gazsó Attila
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
