@@ -152,6 +152,7 @@ extern "C"
     GSASL_SUGGESTED_PIN = 9,
     GSASL_PIN = 10,
     GSASL_REALM = 11,
+    GSASL_DIGEST_MD5_HASHED_PASSWORD = 12,
     /* Server validation callback properties. */
     GSASL_VALIDATE_SIMPLE = 500,
     GSASL_VALIDATE_EXTERNAL = 501,
